feature / add JVM tuning extend memory & change gc algorithm