@@ -78,4 +78,14 @@ tasks.named('test') {
     }
 }
 
-
+// Spring Boot 애플리케이션 JVM 설정 (ZGC + GC 로그)
+bootRun {
+    jvmArgs = [
+        '-Xmx2g',
+        '-Xms2g',
+        '-XX:+UseZGC',
+        '-XX:+ZGenerational',
+        // '-Xlog:gc*:file=gc.log:time,uptime,level,tags:filecount=5,filesize=10m', # gc.log 파일 생성
+        '-XX:+HeapDumpOnOutOfMemoryError'
+    ]
+}
